# composable_kernel

./: .clang-format  .gitignore  CMakeLists.txt  hip-toolchain-windows.cmake  jenkinsTest.txt
client_example/: CMakeLists.txt
client_example/02_gemm_add_add_fastgelu/: CMakeLists.txt
client_example/03_gemm_layernorm/: CMakeLists.txt
client_example/04_contraction/: CMakeLists.txt
client_example/07_grouped_conv2d_fwd/: CMakeLists.txt
client_example/08_fused_attention/: CMakeLists.txt
client_example/09_quantization/: CMakeLists.txt
client_example/10_grouped_conv2d_bwd_data/: CMakeLists.txt
client_example/11_grouped_conv_bwd_weight/: CMakeLists.txt
client_example/12_elementwise_normalization/: CMakeLists.txt
client_example/13_batchnorm/: CMakeLists.txt
client_example/14_instance_id/: CMakeLists.txt
cmake/: CLI11.cmake  EnableCompilerWarnings.cmake  googletest.cmake
example/: CMakeLists.txt
example/01_gemm/: common.hpp  gemm_xdl_skip_b_lds_fp16.cpp  run_gemm_example.inc
example/12_reduce/: reduce_blockwise.cpp  reduce_blockwise_impl.hpp  reduce_blockwise_two_call.cpp  reduce_multiblock_atomic_add.cpp  reduce_multiblock_atomic_add_impl.hpp
example/23_softmax/: softmax_blockwise.cpp
example/27_layernorm/: layernorm_blockwise.cpp
example/32_batched_gemm_scale_softmax_gemm/: CMakeLists.txt
example/33_multiple_reduce/: dual_reduce_common.hpp  dual_reduce_multiblock.cpp  dual_reduce_threadwise.cpp
example/34_batchnorm/: batchnorm_backward_nhwc.cpp  batchnorm_forward_inferring_nhwc.cpp  batchnorm_forward_training_nhwc.cpp
example/36_sparse_embedding/: sparse_embedding3_forward_layernorm.cpp
example/42_groupnorm/: groupnorm_sigmoid_fp16.cpp
example/45_elementwise_normalization/: elementwise_layernorm_blockwise.cpp
include/ck/tensor_operation/gpu/grid/: gridwise_elementwise_layernorm_welford_variance.hpp
include/ck/tensor_operation/gpu/warp/: wmma_gemm.hpp
include/ck/utility/: cli.hpp  init_method.hpp
profiler/: CMakeLists.txt
profiler/include/profiler/: data_type_enum_helper.hpp  profile_batchnorm_backward_impl.hpp  profile_batchnorm_forward_impl.hpp  profile_reduce_impl.hpp
profiler/src/: profile_batchnorm_bwd.cpp  profile_batchnorm_fwd.cpp  profile_reduce.cpp
test/: CMakeLists.txt
test/batchnorm/: batchnorm_bwd_rank_4.cpp  batchnorm_fwd_rank_4.cpp
test/gemm/: CMakeLists.txt
test/gemm/instance/: gemm_wavelet_f16_tn_instance.hpp
test/reduce/: CMakeLists.txt  reduce_no_index.cpp  reduce_with_index.cpp
