cmake_minimum_required(VERSION 3.15)
project(ck_app)

find_package(composable_kernel 1.0.0 COMPONENTS device_operations)
find_package(hip REQUIRED)
message(STATUS "Building with HIP ${hip_VERSION}")

add_subdirectory(01_gemm)
add_subdirectory(02_gemm_add_add_fastgelu)
add_subdirectory(03_gemm_layernorm)
add_subdirectory(04_contraction)
add_subdirectory(05_layernorm)
add_subdirectory(06_softmax)
add_subdirectory(07_grouped_conv2d_fwd)
add_subdirectory(08_fused_attention)
add_subdirectory(09_quantization)
add_subdirectory(10_grouped_conv2d_bwd_data)
add_subdirectory(11_grouped_conv_bwd_weight)
add_subdirectory(12_elementwise_normalization)
add_subdirectory(13_batchnorm)
add_subdirectory(14_instance_id)
