add_custom_target(client_gemm_fastgelu_examples DEPENDS
        client_gemm_add_add_fastgelu client_gemm_add_fastgelu client_gemm_fastgelu)

add_executable(client_gemm_add_add_fastgelu gemm_add_add_fastgelu.cpp)
target_link_libraries(client_gemm_add_add_fastgelu PRIVATE composable_kernel::device_operations)
target_compile_features(client_gemm_add_add_fastgelu PRIVATE cxx_std_17)

add_executable(client_gemm_add_fastgelu gemm_add_fastgelu.cpp)
target_link_libraries(client_gemm_add_fastgelu PRIVATE composable_kernel::device_operations)
target_compile_features(client_gemm_add_fastgelu PRIVATE cxx_std_17)

add_executable(client_gemm_fastgelu gemm_fastgelu.cpp)
target_link_libraries(client_gemm_fastgelu PRIVATE composable_kernel::device_operations)
target_compile_features(client_gemm_fastgelu PRIVATE cxx_std_17)
