add_executable(client_conv2d_fwd_bias_relu_perchannel_quantization conv2d_fwd_bias_relu_perchannel_quantization.cpp)
target_link_libraries(client_conv2d_fwd_bias_relu_perchannel_quantization PRIVATE composable_kernel::device_operations)
target_compile_features(client_conv2d_fwd_bias_relu_perchannel_quantization PRIVATE cxx_std_17)

add_executable(client_conv2d_fwd_bias_relu_perlayer_quantization conv2d_fwd_bias_relu_perlayer_quantization.cpp)
target_link_libraries(client_conv2d_fwd_bias_relu_perlayer_quantization PRIVATE composable_kernel::device_operations)
target_compile_features(client_conv2d_fwd_bias_relu_perlayer_quantization PRIVATE cxx_std_17)

add_executable(client_conv2d_fwd_perchannel_quantization conv2d_fwd_perchannel_quantization.cpp)
target_link_libraries(client_conv2d_fwd_perchannel_quantization PRIVATE composable_kernel::device_operations)
target_compile_features(client_conv2d_fwd_perchannel_quantization PRIVATE cxx_std_17)

add_executable(client_conv2d_fwd_perlayer_quantization conv2d_fwd_perlayer_quantization.cpp)
target_link_libraries(client_conv2d_fwd_perlayer_quantization PRIVATE composable_kernel::device_operations)
target_compile_features(client_conv2d_fwd_perlayer_quantization PRIVATE cxx_std_17)